--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,12 @@ aiosignal==1.3.1
 anyio==3.6.2
 async-timeout==4.0.2
 attrs==22.2.0
-black==23.1.0
+black==23.3.0
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.1.0
 click==8.1.3
-cryptography==39.0.2
+cryptography==40.0.1
 dnspython==2.3.0
 fastapi==0.95.0
 frozenlist==1.3.3
@@ -25,10 +25,13 @@ packaging==23.0
 pathspec==0.11.1
 pdfminer.six==20221105
 pinecone-client==2.2.1
-platformdirs==3.1.1
-psycopg2-binary==2.9.5
+platformdirs==3.2.0
+protobuf==3.20.3
+psycopg2==2.9.5
 pycparser==2.21
+pycryptodome==3.17
 pydantic==1.10.7
+PyMySQL==1.0.3
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-multipart==0.0.6
@@ -44,6 +47,6 @@ typing-extensions==4.5.0
 urllib3==1.26.15
 uvicorn==0.21.1
 uvloop==0.17.0
-watchfiles==0.18.1
+watchfiles==0.19.0
 websockets==10.4
 yarl==1.8.2
