--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ pdfminer.six==20221105
 pinecone-client==2.2.1
 platformdirs==3.2.0
 protobuf==3.20.3
-psycopg2==2.9.5
+psycopg2-binary
 pycparser==2.21
 pycryptodome==3.17
 pydantic==1.10.7
