--- a/requirements.txt
+++ b/requirements.txt
@@ -8,26 +8,49 @@ certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.1.0
 click==8.1.3
+cmake==3.26.3
 cryptography==40.0.1
 dnspython==2.3.0
 fastapi==0.95.0
+filelock==3.12.0
 frozenlist==1.3.3
+fsspec==2023.4.0
 greenlet==2.0.2
 h11==0.14.0
 httptools==0.5.0
+huggingface-hub==0.14.1
 idna==3.4
+Jinja2==3.1.2
+joblib==1.2.0
+lit==16.0.2
 loguru==0.6.0
+MarkupSafe==2.1.2
+mpmath==1.3.0
 multidict==6.0.4
 mypy-extensions==1.0.0
+networkx==3.1
+nltk==3.8.1
 numpy==1.24.2
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
 openai==0.27.2
 packaging==23.0
 pathspec==0.11.1
 pdfminer.six==20221105
+Pillow==9.5.0
 pinecone-client==2.2.1
 platformdirs==3.2.0
 protobuf==3.20.3
-psycopg2-binary
+psycopg2-binary==2.9.5
 pycparser==2.21
 pycryptodome==3.17
 pydantic==1.10.7
@@ -36,13 +59,25 @@ python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-multipart==0.0.6
 PyYAML==6.0
+regex==2023.3.23
 requests==2.28.2
+scikit-learn==1.2.2
+scipy==1.10.1
+sentence-transformers==2.2.2
+sentencepiece==0.1.98
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.7
 starlette==0.26.1
+sympy==1.11.1
+threadpoolctl==3.1.0
+tokenizers==0.13.3
 tomli==2.0.1
+torch==2.0.0
+torchvision==0.15.1
 tqdm==4.65.0
+transformers==4.28.1
+triton==2.0.0
 typing-extensions==4.5.0
 urllib3==1.26.15
 uvicorn==0.21.1
